kustomize/webserver/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  clusterIP: 172.30.19.253
  clusterIPs:
  - 172.30.19.253
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: web
  sessionAffinity: None
  type: ClusterIP
