kustomize/webserver/base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web
  name: web
spec:
  host: web-test.apps.ocp4.example.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
